--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>check_armstrong_between_Two_Interval</name>
+	<name>Print_Factor_of_number</name>
 	<comment></comment>
 	<projects>
 	</projects>
