--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>make_simple_Calculator</name>
+	<name>display_primeNumber_using_function</name>
 	<comment></comment>
 	<projects>
 	</projects>
