--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>check_primeNumber_Armstrong_num</name>
+	<name>sumOf_two_PrimeNumbers</name>
 	<comment></comment>
 	<projects>
 	</projects>
